--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/roboto": "^5.2.8",
     "@phosphor-icons/react": "^2.1.10",
     "@types/node": "^24.5.2",
     "react": "^19.1.1",
